# oism-server_public

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile  path_permission_cfg.json
.github/old/: build_preview.yml  build_production.yml
configuration/: base.yaml  local.yaml
docs/: project-structure.d2
src/: application_path_gen.rs  configuration.rs  error_result.rs  lib.rs  main.rs  telemetry.rs  test.rs
src/cache/: mod.rs
src/db/: auth.rs  invenope.rs  inventory.rs  mod.rs  mongo.rs  order.rs  register.rs  retrn.rs  shipment.rs  transfer.rs
src/server/: auth.rs  export.rs  inventory.rs  middleware.rs  mod.rs  order.rs  path_control.rs  register.rs  retrn.rs  shipment.rs  transfer.rs  ws.rs
src/services/: google_service.rs  mod.rs
tests/api/: auth.rs  helpers.rs  inventory.rs  main.rs  register.rs
